# wine-backend

./: .bazelrc  .gitignore  .style.yapf  BUILD.bazel  MODULE.bazel  buf.gen.yaml  buf.yaml  go.mod  go.sum  pyproject.toml  requirements.in  requirements.txt  settings.json
api/wine/: BUILD.bazel  proto_def.bzl  proto_validation_test.py
api/wine/v1/commercial/: BUILD.bazel
api/wine/v1/geography/: BUILD.bazel  appellation.proto  appellation_test.py  continent.proto  country.proto  region.proto  subregion.proto  vineyard.proto
api/wine/v1/geography/testing/: BUILD.bazel  appellation_test.py  continent_test.py  country_test.py  region_test.py  subregion_test.py  vineyard_test.py
api/wine/v1/product/: grape.proto  wine_grape.proto
tmp/: tmp.go
