module(
    name = "wine_backend",
    version = "1.0.0.0",
)

# Protobuf Rules
bazel_dep(name = "protobuf", version = "34.0.bcr.1")
bazel_dep(name = "protovalidate", version = "1.1.1")

# Go Rules
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Python Rules
bazel_dep(name = "rules_python", version = "1.9.0")

# Java & Kotlin Rules
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_kotlin", version = "2.3.10")

# Swift Rules
bazel_dep(name = "rules_swift", version = "3.5.0")

# CC Rules
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Go Toolchain Setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")
use_repo(go_sdk, "go_default_sdk")

register_toolchains("@go_default_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "build_buf_go_protovalidate", "org_golang_google_protobuf")

# Python Toolchain Setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

register_toolchains("@python_3_11//:all")
