module(
  name = "wine_backend",
  version = "1.0.0.0",
)

# 1. Protobuf Rules
bazel_dep(name = "protobuf", version = "34.0")

# 2. Go Rules
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# 3. Python Rules
bazel_dep(name = "rules_python", version = "1.9.0")

# 4. Java & Kotlin Rules
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_kotlin", version = "2.3.10")

# 5. Swift Rules
bazel_dep(name = "rules_swift", version = "1.16.0")

# 6. Go Toolchain Setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")
use_repo(go_sdk, "go_default_sdk")
register_toolchains("@go_default_sdk//:all")

# 7. Python Toolchain Setup
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")
register_toolchains("@python_3_11//:all")