load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
load("@rules_python//python:defs.bzl", "py_library")

py_proto_library(
    name = "validate_py_proto",
    visibility = ["//visibility:public"],
    deps = ["@protovalidate//proto/protovalidate/buf/validate:validate_proto"],
)

py_library(
    name = "proto_validation_test",
    srcs = ["proto_validation_test.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pip_deps//protovalidate",
    ],
)
