load("//api/wine:proto_def.bzl", "proto_libraries")

GO_BASE = "github.com/stephen-sjrossman/wine-backend/api/wine/v1/geography"

proto_libraries(
    name = "appellation",
    srcs = ["appellation.proto"],
    go_base = GO_BASE,
    deps = [
        "@protobuf//:timestamp_proto",
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto",
    ],
)

proto_libraries(
    name = "continent",
    srcs = ["continent.proto"],
    go_base = GO_BASE,
    deps = [
        "@protobuf//:timestamp_proto",
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto",
    ],
)

proto_libraries(
    name = "country",
    srcs = ["country.proto"],
    go_base = GO_BASE,
    deps = [
        "@protobuf//:timestamp_proto",
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto",
    ],
)

proto_libraries(
    name = "region",
    srcs = ["region.proto"],
    go_base = GO_BASE,
    deps = [
        "@protobuf//:timestamp_proto",
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto",
    ],
)

proto_libraries(
    name = "subregion",
    srcs = ["subregion.proto"],
    go_base = GO_BASE,
    deps = [
        "@protobuf//:timestamp_proto",
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto",
    ],
)

proto_libraries(
    name = "vineyard",
    srcs = ["vineyard.proto"],
    go_base = GO_BASE,
    deps = [
        "@protobuf//:timestamp_proto",
        "@protovalidate//proto/protovalidate/buf/validate:validate_proto",
    ],
)
